--- a/ImageProcessingBot/ImageProcessingBot/appsettings.json
+++ b/ImageProcessingBot/ImageProcessingBot/appsettings.json
@@ -1,7 +1,7 @@
 {
     "botFilePath": "ImageProcessingBot.bot",
     "botFileSecret": "",
-    "computerVisionKey" : "ed2a6493eac6474ca61cd3912bb0bb2f",
+    "computerVisionKey" : "Enter your Key here",
     "computerVisionEndpoint" : "https://southeastasia.api.cognitive.microsoft.com"
     
   }
